[package]
name = "schonhage-strassen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-poly = "0.3.0"
ark-ec = "0.3.0"
rand = "0.8.5"
num-bigint = "0.4.3"
num = "0.4.0"
num-traits = "0.2"